@startuml class_diagram_sipeta_tpk
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam class {
  BackgroundColor #FAF0DC
  BorderColor #C4A882
  HeaderBackgroundColor #E8D5B7
  FontSize 11
  AttributeFontSize 10
}

title CLASS DIAGRAM\nSIPETA TPK - Sistem Informasi Peta Tempat Penimbunan Kayu

class User {
  +UUID id <<PK>>
  +String username <<UNIQUE>>
  +String email
  +String full_name
  +String avatar_url
  +DateTime created_at
  +DateTime updated_at
  --
  +enum role(admin, staff)
  +login(email, password)
  +logout()
  +updateProfile(data)
}

class StokKayu {
  +String id <<PK>>
  +String zone
  +String tpk_name
  +String wood_type
  +Numeric volume
  +Integer log_count
  +String grade
  +UUID updated_by <<FK>>
  +JSONB coordinates
  +Date tanggal
  +DateTime created_at
  +DateTime updated_at
  --
  +enum status(Available, Sold)
  +fetchAll()
  +fetchByZone(zone)
  +update(id, data)
}

class StokKayuHistory {
  +BigInt id <<PK, AUTO>>
  +String block_id <<FK>>
  +String zone
  +String tpk_name
  +String wood_type
  +Numeric volume
  +Integer log_count
  +String grade
  +String status
  +UUID updated_by <<FK>>
  +Date tanggal
  +DateTime created_at
  --
  +insert(data)
  +fetchByMonth(month)
  +exportToExcel()
}

class SystemSettings {
  +Integer id <<PK>> = 1
  +String tpk_name
  +String location
  +String capacity
  +String total_area
  +String zones
  +UUID updated_by <<FK>>
  +DateTime updated_at
  --
  +fetch()
  +update(data)
}

' === RELASI ===
User "1" -- "0..*" StokKayu : mengupdate >
User "1" -- "0..*" StokKayuHistory : mencatat >
User "1" -- "1" SystemSettings : mengelola >
StokKayu "1" *-- "0..*" StokKayuHistory : menghasilkan >

@enduml
